metadata/force-app/main/default/objects/Limit__c/Limit__c.object-meta.xml
<CustomObject>
    <label>Limit</label>
    <nameField>
        <label>Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>