metadata/force-app/main/default/objects/Limit__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CX user Community Limits</fullName>
            </value>
            <value>
                <fullName>AI Processing Limits</fullName>
            </value>
            <value>
                <fullName>CX Omnichannel Limits</fullName>
            </value>
            <value>
                <fullName>Analytics API Limits</fullName>
            </value>
            <value>
                <fullName>Content Operations Limits</fullName>
            </value>
            <value>
                <fullName>DAM Limits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>