metadata/force-app/main/default/objects/Limit__c/fields/Limit_Code__c.field-meta.xml
<CustomField>
    <fullName>Limit_Code__c</fullName>
    <label>Limit Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>