metadata/force-app/main/default/objects/Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limit_Code__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>